# memorystream

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  memorystream.c  memorystream.h
.github/workflows/: build.yml
cmake/: FindValgrind.cmake
test/: test.cpp
